--- a/app/templates/venue/pages/detail.html
+++ b/app/templates/venue/pages/detail.html
@@ -51,10 +51,10 @@
 
 <div class="row">
   <div class="col-sm-3">
-    <a href="{{ url_for('venue.edit_venue', venue_id=venue.id) }}" class="btn btn-primary btn-lg btn-block">Edit Venue</a>
+    <a href="{{ url_for('venue.edit_form_page', venue_id=venue.id) }}" class="btn btn-primary btn-lg btn-block">Edit Venue</a>
   </div>
   <div class="col-sm-3">
-    <form class="form" method="post" action="{{ url_for('venue.delete_venue', venue_id=venue.id) }}">
+    <form class="form" method="post" action="{{ url_for('venue.delete_action', venue_id=venue.id) }}">
     	<input type="submit" value="Delete Venue" class="btn btn-primary btn-lg btn-block">
 	</form>
   </div>
