--- a/app/templates/venue/forms/edit.html
+++ b/app/templates/venue/forms/edit.html
@@ -2,8 +2,8 @@
 {% block title %}Edit Venue{% endblock %}
 {% block content %}
   <div class="form-wrapper">
-    <form class="form" method="post" action="/venues/{{venue.id}}/edit">
-      <h3 class="form-heading">Edit venue <em>{{ venue.name }}</em> <a href="{{ url_for('index') }}" title="Back to homepage"><i class="fa fa-home pull-right"></i></a></h3>
+    <form class="form" method="post" action="{{ url_for('venue.edit_form_page', venue_id=venue.id) }}">
+      <h3 class="form-heading">Edit venue <em>{{ venue.name }}</em> <a href="{{ url_for('core.index_page') }}" title="Back to homepage"><i class="fa fa-home pull-right"></i></a></h3>
       <div class="form-group">
         <label for="name">Name</label>
         {{ form.name(class_ = 'form-control', value = venue.name, autofocus = true) }}
