--- a/app/templates/venue/forms/new.html
+++ b/app/templates/venue/forms/new.html
@@ -3,7 +3,7 @@
 {% block content %}
   <div class="form-wrapper">
     <form method="post" class="form">
-      <h3 class="form-heading">List a new venue <a href="{{ url_for('index') }}" title="Back to homepage"><i class="fa fa-home pull-right"></i></a></h3>
+      <h3 class="form-heading">List a new venue <a href="{{ url_for('core.index_page') }}" title="Back to homepage"><i class="fa fa-home pull-right"></i></a></h3>
       <div class="form-group">
         <label for="name">Name</label>
         {{ form.name(class_ = 'form-control', autofocus = true) }}
@@ -29,7 +29,7 @@
       </div>
       <div class="form-group">
           <label for="website">Website</label>
-          {{ form.website(class_ = 'form-control', placeholder='http://',v autofocus = true) }}
+          {{ form.website(class_ = 'form-control', placeholder='http://', autofocus = true) }}
       </div>
       <div class="form-group">
         <label for="genres">Genres</label>
